--- a/3-2.md
+++ b/3-2.md
@@ -1,1 +1,69 @@
+<H2>超音波距離感測器+LED (紅色LED:亮<70cm, 緑色LED: 亮<270cm, 藍色LED:亮, 介於70cm ~ 270cm之間) + RS232 Output</H1>
 
+![圖片](https://user-images.githubusercontent.com/16370565/134790434-5e979b63-a7a3-49e0-8c47-3b90f7c19f04.png)
+![圖片](https://user-images.githubusercontent.com/16370565/134790439-52d6300e-412d-4309-b884-f99308b86dd3.png)
+![圖片](https://user-images.githubusercontent.com/16370565/134790447-519ec5bf-7cc9-4dab-8ca8-b38bec7df094.png)
+
+<H4>程式碼</H4>
+
+````C
+int inches = 0;
+int cm = 0;
+
+int redLED = 12;
+int blueLED = 10;
+int greenLED = 8;
+
+
+long readUltrasonicDistance(int triggerPin, int echoPin)
+{
+  pinMode(triggerPin, OUTPUT);  // Clear the trigger
+  digitalWrite(triggerPin, LOW);
+  delayMicroseconds(2);
+  // Sets the trigger pin to HIGH state for 10 microseconds
+  digitalWrite(triggerPin, HIGH);
+  delayMicroseconds(10);
+  digitalWrite(triggerPin, LOW);
+  pinMode(echoPin, INPUT);
+  // Reads the echo pin, and returns the sound wave travel time in microseconds
+  return pulseIn(echoPin, HIGH);
+}
+
+void setup()
+{
+  Serial.begin(9600);
+
+}
+
+void loop()
+{
+  // measure the ping time in cm
+  cm = 0.01723 * readUltrasonicDistance(7, 7);
+  // convert to inches by dividing by 2.54
+  inches = (cm / 2.54);
+  Serial.print(inches);
+  Serial.print("in, ");
+  Serial.print(cm);
+  Serial.println("cm");
+  
+  if(cm < 70){
+    digitalWrite(redLED, HIGH);
+    digitalWrite(blueLED, LOW);
+    digitalWrite(greenLED, LOW); 
+  }else if(cm >= 70 && cm <= 270){
+    digitalWrite(blueLED, HIGH);
+    digitalWrite(redLED, LOW);
+    digitalWrite(greenLED, LOW); 
+  }else if(cm > 270){
+    digitalWrite(greenLED, HIGH);
+    digitalWrite(redLED, LOW);
+    digitalWrite(blueLED, LOW); 
+  }else{
+    digitalWrite(greenLED, LOW);
+    digitalWrite(redLED, LOW);
+    digitalWrite(blueLED, LOW); 
+  }
+  
+  delay(100); // Wait for 100 millisecond(s)
+}
+````
