--- a/W3/3-3.md
+++ b/W3/3-3.md
@@ -1,2 +1,57 @@
 <H1>通過Serial印出9X9乘法表, 計算時亮紅色LED, 綠色LED慢慢變亮亮完成時全亮, 並且紅色LED OFF</H1>
 
+![圖片](https://user-images.githubusercontent.com/16370565/134791297-3eb90729-eebc-430c-8020-9dea8d5f11b6.png)
+
+<H3>程式碼</H3>
+
+````C
+int redLED = 13;
+int greenLED = 11;
+int i,j,k;
+int result, result2, result3;
+
+String d0 = "****** 9X9 Table ******";
+String d1, d2, d3;
+
+void setup()
+{
+  pinMode(redLED, OUTPUT);
+  pinMode(greenLED, OUTPUT);
+  Serial.begin(9600);
+}
+
+void loop()
+{
+  int greenLight = 0; //綠燈亮度
+  
+  //1.紅燈全亮,綠燈全滅
+  digitalWrite(redLED, HIGH);
+  digitalWrite(greenLED, greenLight);
+  
+  for (int i=1;i<=9; i=i+3){
+    for (int j=1;j<=9; j++){
+      
+      result = i*j;
+      result2 = (i+1)*j;
+      result3 = (i+2)*j;
+      
+      d1 = String(String(i) + "X" + String(j) + "=" + String(result));
+      d2 = String(String(i+1) + "X" + String(j) + "=" + String(result2));
+      d3 = String(String(i+2) + "X" + String(j) + "=" + String(result3));
+      
+      Serial.println(d1 + ", " + d2 + ", " + d3);
+
+      greenLight+=1;
+      
+      delay(100);
+    } // loop j
+    analogWrite(greenLED, greenLight*3); //綠燈漸亮
+    Serial.println("");
+  } // loop i
+  
+  digitalWrite(redLED, LOW); //計算完畢,紅燈全滅
+  analogWrite(greenLED, 255); //綠燈亮度最大
+  delay(2000);	
+  analogWrite(greenLED, 0); //綠燈滅
+}
+````
