--- a/W5/5-2.md
+++ b/W5/5-2.md
@@ -1,1 +1,35 @@
-<h1>Lab 5-2 LCD顯示溫度感應器的溫度;若溫度<38 綠LED亮; 若大於38度, 紅色LED亮</h1>
+<h1>Lab 5-2 LCD顯示溫度感應器的溫度;若溫度<38 綠LED亮;若大於38度, 紅色LED亮</h1>
+  
+![圖片](https://user-images.githubusercontent.com/16370565/138577782-523f951c-d163-4aa0-8a10-a35f3ad8ecf6.png)
+
+  <h4>程式碼</H4>
+  
+  ````C
+  #include <LiquidCrystal.h>
+
+LiquidCrystal lcd(12, 11, 5, 4, 3, 2);
+
+void setup() {
+    lcd.begin(16, 2);
+    Serial.begin(9600);	
+    pinMode(A1, INPUT); // Read analog voltage (2^10)
+}
+
+void loop() {
+    int reading = analogRead(A1);  // read analog level (2^10)
+    lcd.setCursor(0,0);  
+    lcd.print("TMP Sensor Demo");
+  
+    float voltage = (reading/1024.0) * 5.0;
+    float tempC = (voltage -0.5) * 100.0;
+
+    lcd.setCursor(0,1);
+    lcd.print("Tmp:");
+    lcd.print(tempC);
+    lcd.print(" C");
+    delay(500);
+    lcd.clear();
+    Serial.println(reading);
+    Serial.println(voltage);  
+}
+  ````
