--- a/W5/5-2.md
+++ b/W5/5-2.md
@@ -7,31 +7,46 @@
   <h4>程式碼</H4>
   
   ````C
-  #include <LiquidCrystal.h>
+#include <LiquidCrystal.h>
 
 LiquidCrystal lcd(12, 11, 5, 4, 3, 2);
 
+int LedG = 6;
+int LedR = 7;
+
 void setup() {
-    lcd.begin(16, 2);
-    Serial.begin(9600);	
-    pinMode(A1, INPUT); // Read analog voltage (2^10)
+  lcd.begin(16, 2);
+  Serial.begin(9600);	
+  pinMode(A1, INPUT);
+
 }
 
 void loop() {
-    int reading = analogRead(A1);  // read analog level (2^10)
-    lcd.setCursor(0,0);  
-    lcd.print("TMP Sensor Demo");
+  int reading = analogRead(A1);  // read analog level (2^10)
+  lcd.setCursor(0,0);  
+  lcd.print("TMP Sensor Demo");
   
-    float voltage = (reading/1024.0) * 5.0;
-    float tempC = (voltage -0.5) * 100.0;
+  float voltage = (reading/1024.0) * 5.0;
+  float tempC = (voltage -0.5) * 100.0;
 
-    lcd.setCursor(0,1);
-    lcd.print("Tmp:");
-    lcd.print(tempC);
-    lcd.print(" C");
-    delay(500);
-    lcd.clear();
-    Serial.println(reading);
-    Serial.println(voltage);  
+  if(tempC<38)
+  {
+    digitalWrite(LedG, 1);
+    digitalWrite(LedR, 0);
+  }
+  else
+  {
+    digitalWrite(LedG, 0);
+    digitalWrite(LedR, 1);    
+  }
+  
+  lcd.setCursor(0,1);
+  lcd.print("Tmp:");
+  lcd.print(tempC);
+  lcd.print(" C");
+  delay(500);
+  lcd.clear();
+  Serial.println(reading);
+  Serial.println(voltage);  
 }
   ````
