--- a/W7/Lab7-1,2.md
+++ b/W7/Lab7-1,2.md
@@ -1,10 +1,12 @@
-<H1>7-1</H1>
+<H1>7-1 建立Hellow</H1>
 
 ![圖片](https://user-images.githubusercontent.com/16370565/140629897-f7ea68cb-b2e6-4f71-b0de-535687c91592.png)
 
-<H1>7-2</H1>
+<H1>7-2 十分鐘學 Python</H1>
+
+![圖片](https://user-images.githubusercontent.com/16370565/140630002-e2cf36b6-5f3e-4a28-ac72-693ae103f8a2.png)
  
  
  
- 
+<H3>兩個檔案</H3>
 ![圖片](https://user-images.githubusercontent.com/16370565/140629940-56372aa5-54cd-44df-97c9-c748781f2ad3.png)
